<resources>
    <string name="app_name">PassItOn</string>
    <string name="logo_alt">Pass It On logo</string>
    <string name="sign_in">SIGN IN</string>
    <string name="join_up">JOIN UP</string>
    <string name="copyright">Copyright © 2016</string>
    <string name="forgotten">Forgotten password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="back">Back</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Login</string>
    <string name="action_logout">Log out</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="view_settings">My Account</string>
    <string name="edit">Update</string>
    <string name="delete">Delete account</string>
    <string name="name">First name</string>
    <string name="surname">Last name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="postcode">Postcode</string>
    <string name="save">Save</string>
    <string name="deleteSetting">Are you sure, you want to delete it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="passwordHint">Go0dP455w0rd!</string>
    <string name="phoneHint">07470123456</string>
    <string name="postcodeHint">EH5 2NL</string>
    <string name="emailHint">name@email.com</string>

    <!-- Strings related to items -->
    <string name="action_add">Add item</string>
    <string name="new_item">New item</string>
    <string name="action_save">Save item</string>
    <string name="action_delete">Delete</string>
    <string name="item_photo">Item image</string>
    <string name="placeholder">Placeholder</string>
    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="pickup_time">Best pick-up time</string>
    <string name="pickup">Pick-up time:</string>
    <string name="show_location">Location:</string>
    <string name="location">Location</string>
    <string name="hint_title">Bag of onions</string>
    <string name="hint_desc">12 fresh onions</string>
    <string name="hint_postcode">EH22 2LW</string>
    <string name="hint_pickup">Weekday evenings after 5pm</string>

    <!-- Strings related to messaging -->
    <string name="title_activity_chat">Messages</string>
    <string name="send">Send</string>
    <string name="message_btn">Message</string>
    <string name="chat_sample">Sample</string>
    <string name="chatActivity">Hi, can you tell me if the dried seaweed is still available?</string>

    <!-- Strings related to map -->
    <string name="title_activity_maps">Map</string>
    <string name="view_maps">Map view</string>
    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map.</string>
    <string name="location_permission_denied">Please try again and grant access to use the location.</string>
    <string name="permission_required_toast">Location permission is required.</string>
</resources>
