<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity">
    <item
        android:id="@+id/action_back"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@drawable/ic_back_24px"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Edit_account"
        android:orderInCategory="200"
        android:title="@string/edit"
        android:icon="@drawable/ic_mode_edit_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/Delete_account"
        android:orderInCategory="300"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_exit_24dp"
        app:showAsAction="ifRoom" />
</menu>