<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/show_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/camera_icon"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/item_photo"/>

        <TextView
            android:id="@+id/show_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/item_title"
            android:gravity="center"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/show_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/item_description"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_margin="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/show_location"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_margin="2dp" />

            <TextView
                android:id="@+id/show_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/location"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_margin="2dp" />


        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="18sp"
            android:text="@string/pickup"
            android:gravity="center"
            android:layout_margin="2dp"
            android:layout_gravity="left" />

        <TextView
            android:id="@+id/show_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal|right"
            android:text="@string/pickup_time"
            android:gravity="center"
            android:layout_margin="2dp" />
        </LinearLayout>

        <Button
            android:id="@+id/message_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_btn"
            android:background="@drawable/rounded_green"
            android:height="56dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="16dp" />
    </LinearLayout>
</ScrollView>