<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#689999"
    android:textAlignment="center"
    android:scrollIndicators="right|top"
    android:accessibilityLiveRegion="polite"
    android:fillViewport="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_marginTop="42dp"
        android:src="@drawable/large_logo"
        android:contentDescription="@string/logo_alt"
        android:maxWidth="341dp"
        android:maxHeight="220dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_green"
        android:height="56dp"
        android:width="240dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/button1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_up"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_white"
        android:height="56dp"
        android:width="240dp"
        android:textAlignment="center"
        android:textColor="#3A7676"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/button2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:id="@+id/textView"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp" />
</LinearLayout>
</ScrollView>